--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 
 # production
 /build
-
+__pycache__/
 # misc
 .DS_Store
 .env.local
@@ -22,4 +22,3 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 db.sqlite3
-_pycache_
