--- a/froent_end/tsconfig.json
+++ b/froent_end/tsconfig.json
@@ -1,12 +1,8 @@
 {
   "compilerOptions": {
-    "jsx": "preserve" ,
+    "jsx": "preserve",
     "target": "es6",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -18,11 +14,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
-  
+    "noEmit": true
   },
-  "include": [
-    "src",
-    "custom.d.ts",
-  ]
+  "include": ["src", "custom.d.ts"]
 }
